Closed Bug 559025 Opened 15 years ago Closed 15 years ago

KeyDown/Keyup events uses wrong key code

Categories

(Core Graveyard :: Widget: Qt, defect)

x86
Linux
defect
Not set
normal

Tracking

(Not tracked)

RESOLVED FIXED
mozilla1.9.3a5

People

(Reporter: steffen.imhof, Assigned: steffen.imhof)

Details

Attachments

(1 file, 1 obsolete file)

Qt's nsWindow is sending a charcode for the DOM keydown/keyup events where a keycode is required. As an example, you can go to http://adobe.com and enter text into the search field. In the GTK version the suggestion window pops up as you type. In the Qt version it does not...
Attachment #438719 - Flags: review?(dougt)
Sorry, first version of the patch left in some code which was not used anymore.
Attachment #438719 - Attachment is obsolete: true
Attachment #438736 - Flags: review?(dougt)
Attachment #438719 - Flags: review?(dougt)
Attachment #438736 - Flags: review?(dougt) → review+
Keywords: checkin-needed
Assignee: nobody → steffen.imhof
Status: NEW → ASSIGNED
Status: ASSIGNED → RESOLVED
Closed: 15 years ago
Keywords: checkin-needed
Resolution: --- → FIXED
Target Milestone: --- → mozilla1.9.3a5
Product: Core → Core Graveyard
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: