Bug 559025 - KeyDown/Keyup events uses wrong key code. r=dougt